--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "repository": "https://github.com/basarat/react-typescript.git",
   "scripts": {
     "prepublish": "typings install",
-    "watch": "webpack --watch"
+    "start": "webpack --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "ts-loader": "^0.8.1",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "ts-loader": "^0.8.2",
     "typescript": "^1.9.0-dev.20160328",
     "typings": "^0.7.9",
     "webpack": "^1.12.14"
