--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,12 @@
 {
   "compilerOptions": {
-      "target": "es5",
+      "target": "es6",
       "module": "commonjs",
       "sourceMap": true,
       "jsx": "react"
   },
   "exclude": [
-      "node_modules",
-      "typings/browser",
-      "typings/browser.d.ts"
+      "node_modules"
   ],
   "compileOnSave": false
 }
