--- a/package.json
+++ b/package.json
@@ -1,27 +1,23 @@
 {
   "name": "react-typescript",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "repository": "https://github.com/basarat/react-typescript.git",
+  "version": "0.0.0",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/basarat/typescript-react.git"
+  },
   "scripts": {
-    "start": "webpack --watch"
+    "build": "webpack ./webpack.config.js",
+    "start": "webpack-dev-server ./webpack.config.js --content-base ./public"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-
   "dependencies": {
-    "@types/react": "^15.0.9",
-    "@types/react-dom": "^0.14.23",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
-  },
-
-  "devDependencies": {
-    "source-map-loader": "^0.1.6",
-    "ts-loader": "^2.0.0",
-    "typescript": "^2.1.6",
-    "webpack": "^2.2.1"
+    "@types/react": "16.0.18",
+    "@types/react-dom": "16.0.2",
+    "react": "16.0.0",
+    "react-dom": "16.0.0",
+    "ts-loader": "3.0.5",
+    "typescript": "2.5.3",
+    "webpack": "3.8.1",
+    "webpack-dev-server": "2.9.3"
   }
 }
