--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/react": "16.0.38",
+    "@types/react": "16.0.40",
     "@types/react-dom": "16.0.4",
     "react": "16.2.0",
     "react-dom": "16.2.0",
-    "ts-loader": "3.5.0",
+    "ts-loader": "4.0.1",
     "typescript": "2.7.2",
-    "webpack": "3.11.0",
-    "webpack-dev-server": "2.11.1"
+    "webpack": "4.1.1",
+    "webpack-cli": "2.0.11",
+    "webpack-dev-server": "3.1.1"
   }
 }
