--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "build": "webpack ./webpack.config.js",
     "start": "webpack-dev-server ./webpack.config.js --content-base ./public"
   },
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "@types/react": "16.0.40",
     "@types/react-dom": "16.0.4",
     "react": "16.2.0",
