--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/basarat/typescript-react.git"
   },
   "scripts": {
-    "build": "webpack ./webpack.config.js",
+    "build": "webpack ./webpack.config.js -p",
     "start": "webpack-dev-server ./webpack.config.js --content-base ./public"
   },
   "dependencies": {
