--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "url": "https://github.com/basarat/typescript-react.git"
   },
   "scripts": {
-    "build": "webpack ./webpack.config.js -p",
-    "start": "webpack-dev-server ./webpack.config.js --content-base ./public"
+    "build": "webpack -p",
+    "start": "webpack-dev-server -d --content-base ./public"
   },
   "dependencies": {
     "@types/react": "16.0.40",
