--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,11 @@
     "sourceMap": true,
     "module": "commonjs",
     "target": "es5",
-    "jsx": "react"
+    "jsx": "react",
+    "lib": [
+      "dom",
+      "es6"
+    ]
   },
   "include": [
     "src"
