--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
     "start": "webpack-dev-server -d --content-base ./public"
   },
   "dependencies": {
-    "@types/react": "16.4.2",
-    "@types/react-dom": "16.0.6",
-    "react": "16.4.1",
-    "react-dom": "16.4.1",
-    "ts-loader": "4.4.1",
-    "typescript": "2.9.2",
-    "webpack": "4.12.1",
-    "webpack-cli": "3.0.8",
-    "webpack-dev-server": "3.1.4"
+    "@types/react": "16.4.10",
+    "@types/react-dom": "16.0.7",
+    "clean-webpack-plugin": "0.1.19",
+    "html-webpack-plugin": "3.2.0",
+    "react": "16.4.2",
+    "react-dom": "16.4.2",
+    "ts-loader": "4.4.2",
+    "typescript": "3.0.1",
+    "webpack": "4.16.5",
+    "webpack-cli": "3.1.0",
+    "webpack-dev-server": "3.1.5"
   }
 }
