--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "url": "https://github.com/basarat/react-typescript.git"
   },
   "scripts": {
+    "clean": "rm -rf ./node_modules package-lock.json && npm i",
+    "upgrade": "npm install typescript@latest react@latest react-dom@latest @types/react@latest @types/react-dom@latest webpack@latest webpack-dev-server@latest webpack-cli@latest ts-loader@latest clean-webpack-plugin@latest html-webpack-plugin@latest --save-exact",
     "build": "webpack -p",
     "start": "webpack-dev-server -d --content-base ./public"
   },
