--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react-dom": "16.9.4",
     "clean-webpack-plugin": "3.0.0",
     "html-webpack-plugin": "3.2.0",
+    "mobx": "^5.15.0",
+    "mobx-react": "^6.1.4",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "ts-loader": "6.2.1",
