--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
   "scripts": {
     "clean": "rm -rf ./node_modules package-lock.json && npm i",
     "upgrade": "npm install typescript@latest react@latest react-dom@latest @types/react@latest @types/react-dom@latest webpack@latest webpack-dev-server@latest webpack-cli@latest ts-loader@latest clean-webpack-plugin@latest html-webpack-plugin@latest --save-exact",
-    "build": "webpack -p",
-    "start": "webpack-dev-server -d --content-base ./public"
+    "build": "webpack --mode production",
+    "start": "webpack serve --mode development --content-base ./public"
   },
   "dependencies": {
-    "@types/react": "16.9.11",
-    "@types/react-dom": "16.9.4",
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.1",
     "clean-webpack-plugin": "3.0.0",
-    "html-webpack-plugin": "3.2.0",
-    "react": "16.11.0",
-    "react-dom": "16.11.0",
-    "ts-loader": "6.2.1",
-    "typescript": "3.7.2",
-    "webpack": "4.41.2",
-    "webpack-cli": "3.3.10",
-    "webpack-dev-server": "3.9.0"
+    "html-webpack-plugin": "5.2.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "ts-loader": "8.0.17",
+    "typescript": "4.2.2",
+    "webpack": "5.24.2",
+    "webpack-cli": "4.5.0",
+    "webpack-dev-server": "3.11.2"
   }
 }
